packages/webassemblyjs/test/fixtures/type-errors/operand-if-missing-in-block/module.wast
(module (func $type-if-operand-missing-in-block
	(i32.const 0)
	(block (if (then)))
))
